name:                lulo
version:             0.7.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lulo#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff Wise
maintainer:          jeff.scott.wise@gmail.com
copyright:           2017 Jeff Wise
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lulo
                        Lulo.CLI
                        Lulo.Schema
  other-modules:        Lulo.HTML
                        Lulo.HTML.Types
                        Lulo.HTML.Spec.Combinators
                        Lulo.HTML.Spec.Content
                        Lulo.HTML.Spec.Sidebar
                        Lulo.Document
                        Lulo.Doc.Parser
                        Lulo.Doc.Types
                        Lulo.Value
                        Lulo.Schema.Index
                        Lulo.Schema.Parse
                        Lulo.Schema.SchemaSchema
                        Lulo.Schema.Types
                        Lulo.Types
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , blaze-html
                      , bytestring
                      , containers
                      , errors
                      , hashable
                      , lens
                      , markdown
                      , mtl
                      , optparse-applicative
                      , scientific
                      , text
                      , unordered-containers
                      , vector
                      , yaml
  default-language:     Haskell2010
  ghc-options:         -Wall

executable lulo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lulo
  default-language:    Haskell2010

test-suite lulo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lulo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lulo
